chore: rename to safelens
